# DataTalksClub

./: .gitignore  03Classification.ipynb  2_Regression.ipynb  4_Evaluation.ipynb  8DL.ipynb  8_DeepLearning.ipynb  README.md
5_Deployment/: main.py  predict.py
5deployment/: pyproject.toml  test_predict.py
6_Tree/: main.py  pyproject.toml  tree.ipynb
6tree/: pyproject.toml  tree.ipynb
9_Serverless/: pyproject.toml  serverless.ipynb
